--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Mulish", sans-serif;
-  color: #444444;
+  color: #ffff ;
+  /* background: #110f16 !important; */
+  background: #000 !important;
 }
 
 a {
