preparacion de MVP

--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -10996,7 +10996,7 @@ header.masthead h1, header.masthead .h1 {
 
 ._cta {
   
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("https://padeloide.com/wp-content/uploads/El-Buenos-Aires-Padel-Master-WPT-busca-superar-los-obstaculos-y-asegura-su-realizacion.webp") fixed center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("https://t3.ftcdn.net/jpg/06/00/47/40/360_F_600474045_1HHGi7YMqYlt8x8JiZSrviLIBr8qPOrI.jpg") fixed center center;
   background-size: cover;
   padding: 160px 0;
 }
