Finalizacion de MVP

--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -10890,7 +10890,7 @@ hr.divider-light {
 @media (min-width: 992px) {
   #mainNav {
     box-shadow: none;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.84);
   }
   #mainNav .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
