--- a/src/components/cardPlayers/styles.css
+++ b/src/components/cardPlayers/styles.css
@@ -1,6 +1,6 @@
 .button-wrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: 10px;
   border-radius: 25px;
@@ -13,7 +13,7 @@
 .button-group {
   display: flex;
   gap: 15px;
-  flex: 3; /* 75% del ancho */
+  flex: 2; /* 75% del ancho */
   justify-content: center;
 }
 
@@ -115,6 +115,13 @@
   left: 100%;
 }
 
+.shiny-button.active,
+.shiny-button-drive.active,
+.shiny-button-reves.active {
+  background-color: #4caf50; /* Cambia el color de fondo */
+  color: white; /* Cambia el color del texto */
+}
+
 /* Ajuste responsive */
 @media (max-width: 768px) {
   .button-wrapper {
@@ -124,7 +131,7 @@
 
   .button-group,
   .small-group {
-    justify-content: space-around;
+    justify-content: baseline;
   }
 
   .shiny-button,
@@ -143,6 +150,7 @@
   border-radius: 25px; /* Bordes redondeados */
   padding: 10px 20px;
   width: 450px; /* Ancho fijo, ajustable */
+  height: 50px;
   position: relative;
 }
 
@@ -174,6 +182,8 @@
 @media (max-width: 768px) {
   .search-container {
     width: 100%;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
 }
 
@@ -220,3 +230,77 @@
     border-radius: 5px;
     border: 1px solid #ccc;
   }
+
+
+  /* Fondo oscuro para el modal */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Contenedor del contenido del modal */
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  position: relative;
+  max-width: 400px;
+  width: 90%;
+}
+
+/* Imagen dentro del modal */
+.modal-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+/* Botón para cerrar el modal */
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  color: #666;
+}
+
+/* Contenedor de las tarjetas */
+.card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+/* Imagen dentro de la tarjeta */
+.card-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: transform 0.3s ease;
+}
+
+/* Efecto al hacer hover */
+.card:hover {
+  transform: scale(1.05); /* Aumenta ligeramente el tamaño de la tarjeta */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3); /* Agrega efecto de relieve */
+}
+
+.card:hover .card-image {
+  transform: scale(1.1); /* Aumenta un poco más la imagen para darle dinamismo */
+}
